--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,16 @@
+before_install:
+  - travis_retry go get -u golang.org/x/tools/cmd/cover
+  - travis_retry go get -u golang.org/x/lint/golint
+
 go:
-  - "1.10.x"
-  - "1.11.x"
-  - "1.12.x"
   - "1.13.x"
   - "1.14.x"
   - "1.15.x"
-  - tip
 
 language: go
 
-matrix:
-  allow_failures:
-    - go: tip
-  fast_finish: true
-
 script:
+  - make lint
   - make unit-test
   - make test
 
